# Voxelizer

./: CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in  Voxelizer.html  sources.bib
include/: aux_definitions.h  clean_defs.h  common.h  dev_functions.h  device_code.h  global_functions.h  helper_math.h  host_device_interface.h  host_support.h  node_types.h  voxelizer.h
src/: CMakeLists.txt  host_side.cpp  host_side_modified_CSC.cpp  voxelizer.cu
tests/: CMakeLists.txt
tests/include/: voxelizer_utils.h
tests/src/: CMakeLists.txt  main.cpp  voxelizer_utils.cpp
